force-app/main/default/objects/ssot__VettingEvaluation__dlm/fields/ssot__ApplicationId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ApplicationId__c</fullName>
    <label>Application</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ApplicationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>