force-app/main/default/objects/ssot__VettingEvaluation__dlm/fields/ssot__ReferenceRecordId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReferenceRecordId__c</fullName>
    <label>Reference Record</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReferenceRecordId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>