force-app/main/default/objects/ssot__VettingEvaluation__dlm/fields/ssot__rel_1727366620268_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1727366620268_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VettingEvaluation_ApplicationId_map__rel</label>
    <referenceTo>ssot__Application__dlm</referenceTo>
    <relationshipLabel>VettingEvaluation_ApplicationId_map__rel</relationshipLabel>
    <relationshipName>rel_1727366620268_end</relationshipName>
    <type>Lookup</type>
</CustomField>