force-app/main/default/objects/ssot__VettingEvaluation__dlm/fields/ssot__rel_1727366622715_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1727366622715_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VettingEvaluation_SubjectId_map_Empl_rel</label>
    <referenceTo>ssot__Employee__dlm</referenceTo>
    <relationshipLabel>VettingEvaluation_SubjectId_map_Empl_rel</relationshipLabel>
    <relationshipName>rel_1727366622715_end</relationshipName>
    <type>Lookup</type>
</CustomField>