force-app/main/default/objects/ssot__VettingEvaluation__dlm/fields/ssot__VettingEvaluationOutcome__c.field-meta.xml
<CustomField>
    <fullName>ssot__VettingEvaluationOutcome__c</fullName>
    <label>Vetting Evaluation Outcome</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VettingEvaluationOutcome</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>